<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        android:clipToPadding="false">

        <com.kfaraj.support.widget.SupportAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support_auto_complete_text_view"
            android:drawablePadding="@dimen/drawable_padding"
            app:drawableStartCompat="@drawable/ic_android_black_24dp"
            app:drawableTint="?attr/colorAccent" />

        <com.kfaraj.support.widget.SupportButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/support_button"
            android:drawablePadding="@dimen/drawable_padding"
            app:drawableTopCompat="@drawable/ic_android_black_24dp"
            app:drawableTint="?attr/colorAccent" />

        <com.kfaraj.support.widget.SupportCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/support_check_box"
            android:drawablePadding="@dimen/drawable_padding"
            app:drawableEndCompat="@drawable/ic_android_black_24dp"
            app:drawableTint="?attr/colorAccent" />

        <com.kfaraj.support.widget.SupportCheckedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/support_checked_text_view"
            android:drawablePadding="@dimen/drawable_padding"
            app:drawableStartCompat="@drawable/ic_android_black_24dp"
            app:drawableTint="?attr/colorAccent" />

        <com.kfaraj.support.widget.SupportEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/support_edit_text"
            android:drawablePadding="@dimen/drawable_padding"
            app:drawableStartCompat="@drawable/ic_android_black_24dp"
            app:drawableTint="?attr/colorAccent" />

        <com.kfaraj.support.widget.SupportMultiAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/support_multi_auto_complete_text_view"
            android:drawablePadding="@dimen/drawable_padding"
            app:drawableStartCompat="@drawable/ic_android_black_24dp"
            app:drawableTint="?attr/colorAccent" />

        <com.kfaraj.support.widget.SupportRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/support_radio_button"
            android:drawablePadding="@dimen/drawable_padding"
            app:drawableEndCompat="@drawable/ic_android_black_24dp"
            app:drawableTint="?attr/colorAccent" />

        <com.kfaraj.support.widget.SupportTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/support_text_view"
            android:drawablePadding="@dimen/drawable_padding"
            app:drawableStartCompat="@drawable/ic_android_black_24dp"
            app:drawableTint="?attr/colorAccent" />

        <com.kfaraj.support.widget.SupportToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/support_toggle_button"
            android:drawablePadding="@dimen/drawable_padding"
            app:drawableTopCompat="@drawable/ic_android_black_24dp"
            app:drawableTint="?attr/colorAccent" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
